Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2138

Failed replicas are not deleted when processing tablet reports

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.6.0
    • master, tablet
    • None

    Description

      When a Kudu master processes a tablet report, it ignores tablets that report errors instead of deleting them. These failed tablets may never be deleted if they have already been evicted.

      Attachments

        Activity

          People

            awong Andrew Wong
            awong Andrew Wong
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: